Resolved warnings and renamed Gemini classes to comply with DAO